Fix the always visible scroll in actions in proposals

--- a/clive/__private/ui/operations/governance_operations/governance_operations.scss
+++ b/clive/__private/ui/operations/governance_operations/governance_operations.scss
@@ -392,7 +392,7 @@ Governance ProposalsTable {
 Governance ProposalsActions {
   margin-left: 1;
   width: 3fr;
-  height: auto;
+  height: 1fr;
 }
 
 Governance #action-proposal-row {
